# cabal-dev

./: Main.imports  Setup.hs  cabal-dev.cabal
admin/: cabal-config.in
src/: FakeGhc.hs  Main.hs
src/Distribution/Dev/: AddSource.hs  BuildOpts.hs  CabalInstall.hs  Command.hs  Flags.hs  GhcArgs.hs  GhcPkg.hs  Ghci.hs  InitPkgDb.hs  InstallDependencies.hs  InterrogateCabalInstall.hs  InvokeCabal.hs  MergeCabalConfig.hs  RewriteCabalConfig.hs  Sandbox.hs  Utilities.hs
src/Distribution/Dev/TH/: DeriveCabalCommands.hs
