Name:                cabal-dev
Version:             0.9.2.0.107
Synopsis:            Manage sandboxed Haskell build environments

Description:         cabal-dev is a tool for managing development builds of
                     Haskell projects. It supports maintaining sandboxed
                     cabal-install repositories, and sandboxed ghc package
                     databases.
                     .
                     By default, it uses a cabal-dev directory under
                     the current working directory as the sandbox.
                     .
                     For most packages, just use @cabal-dev@ instead of
                     @cabal@, and you will get a sandboxed build that
                     will not install anything (even automatically installed
                     dependencies) into the user or global ghc package
                     databases.
                     .
                     If your build depends on patched or unreleased libraries,
                     you can add them to your sandboxed build environment by
                     installing them to the sandbox directly:so
                     .
                     > cd /path/to/dependency
                     > cabal-dev install --sandbox=/path/to/sandbox
                     .
                     Then build your library/application with the specified
                     sandbox.
                     .
                     .
                     Additional documentation can be found in the README.md on
                     github:
                     .
                     <http://github.com/creswick/cabal-dev/blob/master/README.md>

License:             BSD3
License-file:        LICENSE
Author:              Josh Hoyt, Jonathan Daugherty, Rogan Creswick
Maintainer:          joshhoyt@gmail.com, jtd@galois.com, creswick@galois.com
Homepage:            http://github.com/creswick/cabal-dev
Bug-Reports:         http://github.com/creswick/cabal-dev/issues
Copyright:           2010-2013 Galois, Inc.
Category:            Development
Build-type:          Custom
Cabal-version:       >=1.8
Data-Files:
  admin/cabal-config.in,
  admin/00-index.tar

source-repository head
  type:        git
  location:    git://github.com/creswick/cabal-dev.git

Flag build-tests
  Description: Build and install the test executable
  Default: False
  Manual: True

Executable cabal-dev
  HS-Source-Dirs:    src
  Main-is:           Main.hs
  GHC-Options:       -Wall
  CPP-Options:       -DNO_PRELUDE_CATCH
  Other-modules:
    Distribution.Dev.AddSource,
    Distribution.Dev.BuildOpts,
    Distribution.Dev.CabalInstall,
    Distribution.Dev.Command,
    Distribution.Dev.Flags,
    Distribution.Dev.Ghci,
    Distribution.Dev.GhcPkg,
    Distribution.Dev.GhcArgs,
    Distribution.Dev.InitPkgDb,
    Distribution.Dev.InstallDependencies,
    Distribution.Dev.InterrogateCabalInstall,
    Distribution.Dev.InvokeCabal,
    Distribution.Dev.MergeCabalConfig,
    Distribution.Dev.RewriteCabalConfig,
    Distribution.Dev.Sandbox,
    Distribution.Dev.TH.DeriveCabalCommands,
    Distribution.Dev.Utilities
  Build-depends:
      base >= 4 && < 5
    , containers >= 0.3 && < 0.6
    , bytestring >= 0.9 && < 0.11
    , directory >= 1.0 && < 1.3
    , filepath >= 1.1 && < 1.4
    , Cabal >= 1.10.0.0 && < 1.23
    -- HTTP: cabal update fails for our hackage server with newer HTTP versions, https://github.com/haskell/HTTP/issues/68
    , HTTP == 4000.2.16.*
    , mtl >= 1.1 && < 2.3
    , network >= 2.2 && < 2.6
    , pretty >= 1.0 && < 1.2
    , process >= 1.0 && < 1.3
    , tar >= 0.4 && < 0.5
    , zlib >= 0.5 && < 0.6
    , transformers >= 0.2 && < 0.5
    , setenv == 0.1.*
    , template-haskell
  Build-tools: cabal >= 0.8.2

Executable cabal-dev-test
  Main-is: RunTests.hs
  GHC-Options: -Wall
  HS-Source-Dirs: src, test
  if !flag(build-tests)
    Buildable: False
  else
    Build-depends:
        base >= 4 && < 5
      , MonadRandom >= 0.1 && < 0.2
      , random >= 1 && < 1.1
      , test-framework >= 0.3 && < 0.9
      , test-framework-hunit >= 0.2
      , HUnit >= 1.2 && <2

Executable fake-ghc-cabal-dev
  HS-Source-Dirs:    src/
  Main-is:           FakeGhc.hs
  GHC-Options:       -Wall
  Build-depends:
      base
    , process >= 1.0 && < 1.3
